# generated/src/main/kotlin/org/openapitools/model/CocktailLight.kt
@@ -1,31 +1,0 @@
-package org.openapitools.model
-
-import com.fasterxml.jackson.annotation.JsonProperty
-import io.swagger.v3.oas.annotations.media.Schema
-import javax.validation.Valid
-
-/**
- * 
- * @param id 
- * @param name 
- * @param preview 
- * @param ingredients 
- */
-data class CocktailLight(
-
-    @Schema(example = "null", description = "")
-    @field:JsonProperty("id") val id: kotlin.Int? = null,
-
-    @Schema(example = "null", description = "")
-    @field:JsonProperty("name") val name: kotlin.String? = null,
-
-    @Schema(example = "null", description = "")
-    @field:JsonProperty("preview") val preview: kotlin.ByteArray? = null,
-
-    @field:Valid
-    @Schema(example = "null", description = "")
-    @field:JsonProperty("ingredients") val ingredients: kotlin.collections.List<CocktailIngredient>? = null
-) {
-
-}
-
