# src/main/kotlin/ru/trishlex/cocktail/CocktailController.kt
@@ -1,14 +1,19 @@
 package ru.trishlex.cocktail
 
 import org.openapitools.api.CocktailApi
+import org.openapitools.model.CocktailLightDTO
+import org.openapitools.model.CocktailNameDTO
 import org.springframework.http.ResponseEntity
 import org.springframework.web.bind.annotation.RestController
 
 @RestController
 class CocktailController(private val cocktailService: CocktailService) : CocktailApi {
 
-    override fun getCocktailNames(name: String): ResponseEntity<List<String>> {
-        return ResponseEntity.ok(cocktailService.getCocktailNames(name))
+    override fun getCocktailNames(name: String): ResponseEntity<List<CocktailNameDTO>> {
+        return ResponseEntity.ok(cocktailService.getCocktailNames(name).map { it.toDTO() })
     }
 
+    override fun getCocktails(name: String, start: Int?, limit: Int?): ResponseEntity<List<CocktailLightDTO>> {
+        return ResponseEntity.ok(cocktailService.getLightCocktails(name, start, limit).map { it.toDto() })
+    }
 }
